--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -8,9 +8,9 @@
     <None Remove="Interface\" />
     <None Remove="Service\" />
   </ItemGroup>
+
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Service\" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.15" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
